--- a/dankjewel.html
+++ b/dankjewel.html
@@ -9,7 +9,7 @@ menu: contact
 	<div class="row">
 		<div class="column small-12 medium-12 large-12">
 			<h1>Alvast bedankt voor uw bericht</h1>
-			We contacteren je spoedig.
+			We contacteren u spoedig.
 		</div>
 	</div>
 </section>
