--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@ menu: contact
 {% include contact.html %}
     
 <section class="flex-child-grow">
-	<form id="contact-form" data-abide action="https://formspree.io/marian@manopura.be" method="POST">
+	<form id="contact-form" data-abide action="https://formspree.io/f/marian@manopura.be" method="POST">
 		<input type="hidden" name="_next" value="dankjewel.html" />
 		<input type="hidden" name="_subject" value="[Manopura.be] Contact bericht!" />
 		<input type="text" name="_gotcha" style="display:none" />
