--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@ menu: contact
 					<span class="form-error">Waar kunnen we je bereiken?</span>
 				</div>
 				<div>
-					<input type="tel" name="_replyTo" placeholder="Telefoon" />
+					<input type="tel" name="telephone" placeholder="Telefoon" />
 					<span class="form-error">Op welk nummer kunnen we je bellen?</span>
 				</div>
 				<div>
