--- a/overzicht.html
+++ b/overzicht.html
@@ -3,5 +3,41 @@ layout: markdown
 menu: overzicht
 ---
 
+Overzicht en kadering van de soorten behandelingen die je bij mij kan volgen.   
 
-Ik ben momenteel deze pagina aan het herwerken. Nog eventjes geduld 😉
+In eerste instantie zijn het allemaal energetische behandelingen. Wat wil dat zeggen?   
+Alles in energie.    
+Lees er gerust de theorie van Einstein op na. E=mc2. (Energie = massa vermenigvuldigd met het kwadraat van lichtsnelheid). Massa en energie zijn gelijk.    
+
+Dat maakt dat energieën elkaar constant beïnvloeden, elke massa beïnvloedt een andere, of het nu een grote of een kleine is. Denk maar aan de maan die het water van de oceanen beïnvloedt in eb en vloed; de aarde is omgeven door een electro-magnetisch veld, met een magnetisch Noorden. Dat veld beïnvloedt alle leven op aarde, en wordt op zijn beurt beïnvloed door de andere planeten en de energetische uitbarstingen van de zon (denk maar aan verhoging van het Noorderlicht in onze atmosfeer bij zonne-erupties). Elk mens is omringd door een eigen kleiner electro-magnetisch veld, waardoor elk mens een ander mens constant beïnvloedt. Binnenin de mens wordt de energie van het elektromagnetisch veld gekanaliseerd in bepaalde banen, zogenaamde meridianen of energiebanen. 
+Het is op die kanalen en in dat elektromagnetisch veld dat mijn behandelingen zich situeren.   
+
+Ik zou ze kunnen indelen in een rangorde van “meer lichamelijk” naar “meer energetisch”. Het is echter belangrijk te weten dat lichaam, geest, energie niet van elkaar te scheiden vallen. Elke soort behandeling werkt telkens in op àlle vlakken met dezelfde intensiteit, maar ik tracht ze te onderscheiden volgens hoe jij de behandeling zal ervaren, zodat je makkelijker kan kiezen waar je voorkeur naartoe gaat. 
+
+“Meer lichamelijk”:   
+**Shiatsu:** 
+via lichte druk op bepaalde punten in het lichaam wordt de doorstroom van de energie in de meridianen gestimuleerd, om een blokkade of een stagnatie op te heffen. De behandeling gebeurt op een stoel en/of op een futon. Je houdt je kleren aan. Als klant ervaar je deze behandeling als ‘massage’ of als soortgelijk aan wat een kinesist of een osteopaat met je doet. De werking en achtergrond zijn echter anders. Mijn ervaring leert dat veel klanten deze verschillende vormen van ‘lichaamswerk’ combineren, èn bij een kinesist gaan, èn/of bij een osteopaat langs gaan, èn ook een Shiatsu behandeling boeken. Net omdat een ‘fysiek’ probleem het best vanuit verschillende invalshoeken bekeken en behandeld wordt. Indien veelvuldige behandelingen van 1 soort niet het gewenste resultaat opleveren en de klacht blijft of terugkomt, dan heeft men de hoofdoorzaak niet gevonden of aangepakt. Die oorzaak kan energetisch zijn in de ruimste zin (mentaal, emotioneel, sociaal, spiritueel,…)
+
+Voetreflexologie: 
+zeer fysiek drukken en inwerken op de voeten alleen, terwijl je rustig neerligt op de futon. Om zo te zeggen, een Shiatsu behandeling in het klein, want er wordt alleen op de voeten gewerkt en niet op het gehele lichaam. Je kan rustig blijven liggen. De behandeling is daarom niet minder intensief, deugddoend of krachtdadig. Het effect ervan werkt door op het gehele lichaam, geest en energie.
+
+“Minder lichamelijk”
+Reiki: je ligt comfortabel neer op een behandeltafel, terwijl ik intuïtief de handen laat rusten op plaatsen in het lichaam waar behandeling nodig is. Er is dus minder ‘actie’ dan bij Shiatsu of voetreflex, je kan makkelijker zelf in een rustige ontspannen staat komen. De behandeling is even effectief als alle andere. Aan het einde van de sessie wordt samen besproken wat er in de behandeling naar boven is gekomen, om mentaal bewust te maken wat in het onbewuste aan het spelen is.
+
+“Minst lichamelijk” - meest oorzakelijk
+PsychoDynamica: 
+Jij kiest of je rustig in de zetel blijft zitten, of liever neerligt op de futon. 
+De behandeling verloopt grotendeels in stilte. Jij komt met een thema waarrond je wil laten werken. Dat kan zeer uiteenlopend zijn (lichamelijke klachten die niet overgaan, moeilijke situatie waar je je in bevindt, moeilijke relatie met specifieke mensen, iets wat je ervaart dat je in de weg zit om voluit te kunnen leven,…)
+In stilte bekijk ik alle relevantie informatie rond dat thema in je brede energetische veld en wordt zo heling tot stand gebracht. 
+Deze behandelvorm zou je kunnen ervaren als minst ‘tastbaar’, omdat diepgaander onbewuste processen aangeraakt worden die je niet in je bewuste aandacht kan terug vinden. 
+Bij voorbeeld: het wordt ondertussen al couranter aangenomen dat je meeleeft en meevoelt met je moeder wanneer je nog in haar buik aan het groeien bent. Indien je moeder tijdens jouw zwangerschap bepaalde moeilijke emoties ondergaat, zoals verdriet om verlies, of boosheid of angst, dan draag je dat mee in je energie. Later, na je geboorte en tijdens de rest van je leven, kan het zijn dat je onbestemde emoties van verdriet, boosheid, angst je overvallen, zonder dat je bewust kan aangeven van waar het precies komt. Ook dit zijn vormen van ‘blokkades’ die energetisch te behandelen vallen, via deze methode.
+
+
+“Minst lichamelijk” - meest mentaal
+
+Mindfulness:
+je kan kiezen om de 8-weekse groepsopleiding te volgen, of ze in 1 op 1 sessies te doen. 
+Je leert oefeningen aan om bewuster in het leven te staan, en beter op te merken welke automatische processen er spelen op mentaal/emotioneel niveau. Hierdoor krijg je meer inzicht in jezelf. De oefeningen zijn deels praktisch, deels meditatie. Hoe meer je de oefeningen doet, hoe meer je inwendige rust kan ervaren. Je wordt volledig begeleid in dit proces. 
+
+Coaching:
+We onderzoeken en bespreken samen de thematiek die je aanbrengt. Ook hier kan het eender wat zijn, lichamelijk ongemak, emotioneel, sociaal, spiritueel,… Door samen naar iets te kijken, en met de verschillende invalshoeken vanuit mijn brede levenservaring, kan je tot inzicht komen om een problematiek aan te pakken of op te lossen. 
